@@ -10,6 +10,7 @@ John Popplewell <john@johnnypops.demon.co.uk>
 Nils Durner <durner@gnunet.org>
 Heikki Lindholm <holindho@cs.helsinki.fi>
 Alex Sadovsky <alexeysad@gmail.com>
+Greg Schohn <greg.schohn@gmail.com>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
